# python-interfaces

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg
interfaces/: __init__.py  base.py  compat.py  exceptions.py  spec.py  typing.py  util.py
tests/: conftest.py  health.sh  interfaces_test.py  run.sh  typing_test.py  util_test.py
